--- a/GeekStore/Areas/Admin/Pages/AdminRoles/Index.cshtml
+++ b/GeekStore/Areas/Admin/Pages/AdminRoles/Index.cshtml
@@ -39,6 +39,9 @@
                     </table>
                 </div>
             </div>
+            <div class="card-footer d-flex justify-content-end">
+                <a asp-page="Create" class="btn btn-success">Nova Role</a>
+            </div>
         </div>
     </div>
 </div>
