--- a/GeekStore/Pages/Shared/_AdminLoginPartial.cshtml
+++ b/GeekStore/Pages/Shared/_AdminLoginPartial.cshtml
@@ -7,7 +7,7 @@
     if (User.IsInRole("Admin"))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Admin" asp-page="/Index">Admin</a>
+            <a class="nav-link text-light" asp-area="Admin" asp-page="/Index">Admin</a>
         </li>
     }
 }
