--- a/GeekStore/Areas/Admin/Pages/AdminUsers/Delete.cshtml
+++ b/GeekStore/Areas/Admin/Pages/AdminUsers/Delete.cshtml
@@ -31,7 +31,7 @@
     </dl>
 
     <form method="post">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="Index">Back to List</a>
+        <input type="submit" value="Apagar" class="btn btn-danger" /> |
+        <a asp-page="Index">Voltar</a>
     </form>
 </div>
