--- a/GeekStore/Areas/Admin/Pages/Shared/_LayoutVazio.cshtml
+++ b/GeekStore/Areas/Admin/Pages/Shared/_LayoutVazio.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - GeekStore</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lux.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GeekStore.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/fontawesome/css/all.css" asp-append-version="true" />
@@ -12,9 +12,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 text-white" style="background-color: #0D6EFD;">
             <div class="container">
-                <a class="navbar-brand" asp-area="Admin" asp-page="/Index">Admin</a>
+                <a class="navbar-brand text-white" asp-area="Admin" asp-page="/Index">Admin</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,13 +22,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-page="/AdminRoles/Index">Gerenciar Roles</a>
+                            <a class="nav-link text-white" asp-area="Admin" asp-page="/AdminRoles/Index">Gerenciar Roles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-page="/AdminUsers/Index">Gerenciar Usuários</a>
+                            <a class="nav-link text-white" asp-area="Admin" asp-page="/AdminUsers/Index">Gerenciar Usuários</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -38,8 +38,8 @@
     </header>
     @RenderBody()
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - GeekStore - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        <div class="container text-center">
+            &copy; 2024 - GeekStore - By João Pedro Monteiro (<a href="https://github.com/joaopedro-monteiro" target="_blank">GitHub</a>)
         </div>
     </footer>
 
